syntax = "proto3";

import "google/protobuf/empty.proto";


package bellis.backend.mobile.auth;

option go_package = 'github.com/bellis-daemon/bellis/modules/backend/app/mobile/auth';

message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 3;
}

message RegisterRequest{
  string email = 1;
  string password = 2;
  string captcha = 3;
}

message ForgetCaptchaRequest{
  string email = 1;
}

message RegisterCaptchaRequest{
  string email = 1;
}

message ForgetChangePasswordRequest{
  string email = 1;
  string captcha = 2;
  string password = 3;
}

message PingResponse{
  string goVersion = 1;
  string buildTime = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
  rpc GetRegisterCaptcha(RegisterCaptchaRequest) returns (google.protobuf.Empty);
  rpc GetForgetCaptcha(ForgetCaptchaRequest) returns (google.protobuf.Empty);
  rpc ForgetChangePassword(ForgetChangePasswordRequest) returns (google.protobuf.Empty);
  rpc Ping(google.protobuf.Empty) returns (PingResponse);
}
